# Sail-VM

./: CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: c-cpp.yml
examples/: count_to_100  hello_world  input
include/: flags.h  global.h  instructions.h  ram.h  syscalls.h  vm.h
src/: flags.c  flags.h  global.c  global.h  instructions.c  instructions.h  ram.c  ram.h  stack.c  stack.h  syscalls.c  vm.c  vm.h
